[package]
name = "syncaud"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rodio = "0.20.1"
serde = { version = "1.0.216", features = ["derive"] }
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
egui = { version = "0.14", features = ["default"] }
egui-file-dialog = "0.8.0"
